# camera

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  bitbucket-pipelines.yml  camera.default  sonar-project.properties
.cargo/: config.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_compatibility.md
.github/scripts/: generate_sbom.sh  validate_notice.py
.github/workflows/: build.yml  release.yml  sbom.yml  test.yml
benches/: convert.rs  encode.rs
g2d-sys/: Cargo.toml
g2d-sys/src/: ffi.rs  ffi_new.rs  lib.rs
src/: args.rs  image.rs  lib.rs  main.rs  replay.rs  sidecar.rs  video.rs
tests/: test_image.rs
