[package]
name = "camera"
description = "Maivin Camera Publisher"
repository = "https://bitbucket.org/au-zone/maivin-camera"
license = "CLOSED"
version = "0.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[workspace]
members = ["g2d-sys"]

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "convert"
harness = false

[dependencies]
cdr = "0.2.4"
clap = { version = "4.5.28", features = ["derive", "env"] }
dma-buf = "0.4.0"
dma-heap = "0.4.0"
edgefirst-schemas = { version = "1.2.4" }
env_logger = "0.11.6"
g2d-sys = { version = "1.0.1", path = "g2d-sys" }
libc = "0.2.154"
log = "0.4.25"
serde = "1.0.199"
serde_derive = "1.0.199"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "time", "io-std"] }
turbojpeg = { version = "1.2.1", features = ["image", "require-simd"] }
unix-ts = "1.0.0"
videostream = "0.9.0"
zenoh = "1.2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.0"
serial_test = "3.2.0"
