[package]
name = "camera"
description = "Maivin Camera Publisher"
repository = "https://bitbucket.org/au-zone/maivin-camera"
license = "CLOSED"
version = "0.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[workspace]
members = ["g2d-sys"]

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "convert"
harness = false

[features]
default = ["tracy"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
cdr = "0.2.4"
clap = { version = "4.5.28", features = ["derive", "env"] }
dma-buf = "0.4.0"
dma-heap = "0.4.0"
edgefirst-schemas = { version = "1.2.4" }
g2d-sys = { version = "1.0.1", path = "g2d-sys" }
libc = "0.2.154"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "time",
    "io-std",
    "tracing",
] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.0", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
turbojpeg = { version = "1.2.1", features = ["image", "require-simd"] }
unix-ts = "1.0.0"
videostream = "0.9.1"
zenoh = "1.2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.0"
serial_test = "3.2.0"
