[package]
name = "edgefirst-camera"
description = "EdgeFirst Camera Publisher"
repository = "https://github.com/EdgeFirstAI/camera"
license = "Apache-2.0"
version = "2.5.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[workspace]
members = ["g2d-sys"]

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "convert"
harness = false

[features]
default = ["tracy"]
tracy = ["tracing-tracy/enable", "tracy-client/enable"]
profiling = [
    "tracing-tracy/sampling",
    "tracing-tracy/system-tracing",
    "tracy-client/sampling",
    "tracy-client/system-tracing",
]

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
console-subscriber = "0.5.0"
dma-buf = "0.4.0"
dma-heap = "0.4.1"
edgefirst-schemas = "1.5.2"
g2d-sys = { version = "1.0.1", path = "g2d-sys" }
kanal = { git = "https://github.com/fereidani/kanal", rev = "b6aeab2" }
libc = "0.2.177"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "time",
    "io-std",
    "tracing",
    "signal",
] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
tracy-client = { version = "0.18.3", default-features = false, features = [
    "manual-lifetime",
    "broadcast",
    "ondemand",
    "fibers",
] }
turbojpeg = { version = "1.3.3", features = ["image", "require-simd"] }
unix-ts = "1.0.0"
videostream = "2.1.4"
zenoh = "1.6.2"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
serial_test = "3.2.0"
