[package]
name = "g2d-sys"
description = "Low-level FFI bindings for the NXP G2D Library"
license = "MIT"
homepage = "https://github.com/EdgeFirstAI/camera"
keywords = ["g2d", "nxp", "imx8", "hardware-acceleration"]
categories = ["computer-vision", "multimedia::video", "external-ffi-bindings"]
version = "1.0.1"
edition = "2021"

[dependencies]
libloading = "0.8.1"
dma-buf = "0.4.0"
nix = { version = "0.29.0", features = ["ioctl"] }
videostream = "2.1.4"